--- a/index.html
+++ b/index.html
@@ -6,39 +6,40 @@
 	<title>
 		homework5
 	</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div>
+	<div class="container">
 		 <div>
-		 	<h2>
+		 	<h2 class="gray-heading">
 		 		NOUS PROPOSONS
 		 	</h2>
-		 	<p>
+		 	<p class="about-tech">
 		 		Les technologies de l’information et la communication au service du citoyen sont notre cœur de métier. Depuis 2002, nous proposons des solutions complètes de développement et de gestion de l’outil informatique pour nos bénéficiaires, les services de Fédération Wallonie-Bruxelles et des organismes d’intérêt public qui en dépendent. Equipement, assistance, développement
 		 	</p>
 		 </div>
-		 <div>
-		 	<h2>
+		<div class="two-texts">
+			<h3 class="white-heading1">
 		 		VOUS ?
-		 	</h2>
-		 	<div>
-		 		IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
-		 	</div>
-		 	<div>
-		 		IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
-		 	</div>
-		 </div>
-		 <div>
-		 	<h2>
-		 		VOUS ?
-		 	</h2>
-		 	<div>
-		 		IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
-		 	</div>
-		 	<div>
-		 		IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
-		 	</div>
-		 </div>
+			</h3>
+			<div class="left-text">
+		 	   IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
+			</div>
+			<div class="right-text">
+				IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
+		    </div>
+		  
+			<h3 class="white-heading2">
+		 	    VOUS ?
+		    </h3>
+			<div class="thefirst">
+			 	IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
+			</div>
+			<div class="thesecond">
+			 	IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
+		    </div/>
+		</div>
+		
 	</div>
 </body>
 </html>
